# mx

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  Mx.podspec  README-GEN_BRANCH.md  README.md  TENETS.md  build.sh
.circleci/: Dockerfile  Dockerfile.test  config.yml  docker.sh  dockerfile-test-entrypoint.sh
.github/workflows/: ccpp.yml  linux.yml  macos.yml  windows.yml  xcode.yaml
CodeGen/: .gitignore  Cargo.toml  mxsrc  rustfmt.toml
CodeGen/src/: error.rs  lib.rs  main.rs
CodeGen/src/dom/: mod.rs
CodeGen/src/generate/: compile_mx.rs  mod.rs  musicxml_xsd.rs  musicxml_xsd_constants.rs  musicxml_xsd_parser.rs  mx_enum_writer.rs  mx_writer.rs  paths.rs  string_stuff.rs  template.rs
CodeGen/src/generate/cpp/: constants.rs  cpp_template.rs  helpers.rs  mod.rs  modeler.rs  mx_modeler.rs  write_custom.rs  write_enums.rs  write_numerics.rs  write_unions.rs  writer.rs
CodeGen/src/generate/data/: NumberOrNormal.cpp.template  NumberOrNormal.h.template  PositiveIntegerOrEmpty.cpp.template  PositiveIntegerOrEmpty.h.template  core.cpp.template  core.h.template  decimal_builtins.cpp.template  decimal_builtins.h.template  decimal_type.cpp.template  decimal_type.h.template  enum.cpp.template  enum.h.template  enum_wrapper.cpp.template  enum_wrapper.h.template  integer.h.template  integer_builtins.cpp.template  integer_builtins.h.template  integer_type.cpp.template  integer_type.h.template  union.cpp.template  union.h.template
CodeGen/src/model/: attribute_group.rs  builtin.rs  create.rs  creator.rs  element.rs  enumeration.rs  mod.rs  post_process.rs  scalar.rs  scalar_string.rs  symbol.rs  transform.rs
CodeGen/src/model/default_create/: enumeration.rs  mod.rs  scalar.rs  scalar_string.rs
CodeGen/src/modelv2/: mod.rs  model.rs  model_builder.rs
CodeGen/src/schematest/: mod.rs  tests.rs
CodeGen/src/utils/: mod.rs  string_stuff.rs
CodeGen/src/xsd/: annotation.rs  attribute.rs  attribute_group.rs  attributes.rs  choice.rs  common.rs  complex_content.rs  complex_type.rs  constants.rs  element.rs  extension.rs  group.rs  id.rs  import.rs  list.rs  mod.rs  primitives.rs  restriction.rs  sequence.rs  simple_content.rs  simple_type.rs  union.rs  utils.rs
CodeGen/tests/: xsd.rs
DevScripts/: ElementsOrder.xlsx  adjustElementsCpp.rb  adjustElementsH.rb  arrowGroup.rb  attributes.rb  attributesLoop.rb  beatUnitGroup.rb  build-for-apple.sh  choices.rb  creditWordsGroup.rb  cueNoteGroup.rb  displayStepOctaveGroup.rb  editorialGroup.rb  editorialVoiceDirectionGroup.rb  editorialVoiceGroup.rb  elementsHUsingFile.rb  elisionSyllabicGroup.rb  elisionSyllabicTextGroup.rb  findFilesWithBadCopyright.rb  fromXElement.rb  fullNoteGroup.rb  graceNoteGroup.rb  includeAlot.rb  includeAttributesIfNeeded.rb  includeEnumsIfNeeded.rb  includeIfNeeded.rb  includeStandaloneIfNeeded.rb  isSymbolFound.rb  layoutGroup.rb  lineInstructionsH.rb  listAttributeClasses.rb  listClassesInEnumsH.rb  listDecimals.rb  listElementClasses.rb  listEnums.rb  listIntegers.rb  listSpecialClasses.rb  listStrings.rb  midiDeviceInstrumentGroup.rb  mx-temp.sh  (+14 more)
Documents/: Untitled1.xsd  musicxml-3.1.xsd
Documents/DevNotes/: Attribute Group Reference.xml  CocoaNotes.txt  Elements.h.order.csv  FourLayers.musx  FourLayers.xml  FourLayersWithBackup.xml  GmMapToMusicXML.xml  IllogicalVoiceTags.xml  MusicXML Standard Sounds.xml  MusicXMLSounds.xml  PerformanceNotes.txt  StaffExperiment.xml  TupletsTest.musx  TupletsTest.xml  VoiceExperiment.xml
Documents/Licenses/: SMuFL_License.txt
Documents/OldCode/: Enums.old.h
Resources/custom/: musescore-slur-start-stop.musicxml  systems-and-pages-original.musx  systems-and-pages.musicxml  systems-and-pages.xml  transposition.musicxml
Resources/expected/: .placeholder  lysuite_ly01a_Pitches_Pitches.xml.expected.xml  lysuite_ly01b_Pitches_Intervals.xml.expected.xml  lysuite_ly01c_Pitches_NoVoiceElement.xml.expected.xml  lysuite_ly01d_Pitches_Microtones.xml.expected.xml  lysuite_ly01e_Pitches_ParenthesizedAccidentals.xml.expected.xml  lysuite_ly01f_Pitches_ParenthesizedMicrotoneAccidentals.xml.expected.xml  lysuite_ly02a_Rests_Durations.xml.expected.xml  lysuite_ly02b_Rests_PitchedRests.xml.expected.xml  lysuite_ly02c_Rests_MultiMeasureRests.xml.expected.xml  lysuite_ly02d_Rests_Multimeasure_TimeSignatures.xml.expected.xml  lysuite_ly02e_Rests_NoType.xml.expected.xml  lysuite_ly03a_Rhythm_Durations.xml.expected.xml  lysuite_ly03b_Rhythm_Backup.xml.expected.xml  lysuite_ly03c_Rhythm_DivisionChange.xml.expected.xml  lysuite_ly03d_Rhythm_DottedDurations_Factors.xml.expected.xml  lysuite_ly11a_TimeSignatures.xml.expected.xml  lysuite_ly11b_TimeSignatures_NoTime.xml.expected.xml  lysuite_ly11c_TimeSignatures_CompoundSimple.xml.expected.xml  lysuite_ly11d_TimeSignatures_CompoundMultiple.xml.expected.xml  lysuite_ly11e_TimeSignatures_CompoundMixed.xml.expected.xml  lysuite_ly11f_TimeSignatures_SymbolMeaning.xml.expected.xml  lysuite_ly11g_TimeSignatures_SingleNumber.xml.expected.xml  lysuite_ly11h_TimeSignatures_SenzaMisura.xml.expected.xml  lysuite_ly12a_Clefs.xml.expected.xml  lysuite_ly12b_Clefs_NoKeyOrClef.xml.expected.xml  lysuite_ly13a_KeySignatures.xml.expected.xml  lysuite_ly13b_KeySignatures_ChurchModes.xml.expected.xml  lysuite_ly13c_KeySignatures_NonTraditional.xml.expected.xml  lysuite_ly13d_KeySignatures_Microtones.xml.expected.xml  lysuite_ly14a_StaffDetails_LineChanges.xml.expected.xml  lysuite_ly21a_Chord_Basic.xml.expected.xml  lysuite_ly21b_Chords_TwoNotes.xml.expected.xml  lysuite_ly21c_Chords_ThreeNotesDuration.xml.expected.xml  lysuite_ly21d_Chords_SchubertStabatMater.xml.expected.xml  lysuite_ly21e_Chords_PickupMeasures.xml.expected.xml  lysuite_ly21f_Chord_ElementInBetween.xml.expected.xml  lysuite_ly22a_Noteheads.xml.expected.xml  lysuite_ly22b_Staff_Notestyles.xml.expected.xml  lysuite_ly22c_Noteheads_Chords.xml.expected.xml  (+223 more)
Resources/foundsuite/: 12 Horn Duets.xml  (+33 more)
Sourcecode/: PositionFunctions.cpp
Sublime/: mx.sublime-project  mx.sublime-workspace  mx.sublime-workspace.example
Xcode/: build_xcframework.sh  mx-macOS.plist
(+4262 files in other folders)
