cmake_minimum_required(VERSION 2.8.12.2)
project(Mx)

option(MX_BUILD_TESTS "build or skip the test suite" OFF)

option(
    MX_BUILD_CORE_TESTS
    "build or skip the tests in the 'core' namespace, requires MX_BUILD_TESTS"
    OFF
)

#set(CMAKE_BINARY_DIR "./Build")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

set(SOURCE "./Sourcecode")
file(GLOB_RECURSE SRC_MX_API ${SOURCE}/mx/api/*.cpp ${SOURCE}/mx/api/*.h)
file(GLOB_RECURSE SRC_MX_CORE ${SOURCE}/mx/core/*.c* ${SOURCE}/mx/core/*.h*)
file(GLOB_RECURSE SRC_MX_IMPL ${SOURCE}/mx/impl/*.cpp ${SOURCE}/mx/impl/*.h)
file(GLOB_RECURSE SRC_MX_PUGIXML ${SOURCE}/mx/pugixml/*.cpp ${SOURCE}/mx/pugixml/*.hpp)
file(GLOB_RECURSE SRC_MX_UTILITY ${SOURCE}/mx/utility/*.cpp ${SOURCE}/mx/utility/*.h)
file(GLOB_RECURSE SRC_MX_XML ${SOURCE}/mx/xml/*.cpp ${SOURCE}/mx/xml/*.h)

file(GLOB_RECURSE SRC_MX_TEST_API ${SOURCE}/mxtest/api/*.cpp ${SOURCE}/mxtest/api/*.h)
file(GLOB_RECURSE SRC_MX_TEST_CONTROL ${SOURCE}/mxtest/control/*.cpp ${SOURCE}/mxtest/control/*.h)
file(GLOB_RECURSE SRC_MX_TEST_FILE ${SOURCE}/mxtest/file/*.cpp ${SOURCE}/mxtest/file/*.h)
file(GLOB_RECURSE SRC_MX_TEST_IMPL ${SOURCE}/mxtest/impl/*.cpp ${SOURCE}/mxtest/impl/*.h)
file(GLOB_RECURSE SRC_MX_TEST_CORE ${SOURCE}/mxtest/core/*.cpp ${SOURCE}/mxtest/core/*.h)
file(GLOB_RECURSE SRC_MX_TEST_IMPORT ${SOURCE}/mxtest/import/*.cpp ${SOURCE}/mxtest/import/*.h)
file(GLOB_RECURSE SRC_MX_TEST_UTILITY ${SOURCE}/mxtest/utility/*.cpp ${SOURCE}/mxtest/utility/*.h)
file(GLOB_RECURSE SRC_MX_TEST_XML ${SOURCE}/mxtest/xml/*.cpp ${SOURCE}/mxtest/xml/*.h)
file(GLOB_RECURSE SRC_CPUL ${SOURCE}/cpul/*.cpp ${SOURCE}/cpul/*.h)

include_directories(${SOURCE})

#IF(!MSVC)
#    add_compile_options(-std=c++14)
#ENDIF()

# Mx
add_library(Mx STATIC ${SRC_MX_API} ${SRC_MX_CORE} ${SRC_MX_IMPL} ${SRC_MX_PUGIXML} ${SRC_MX_UTILITY} ${SRC_MX_XML})
source_group( "api" FILES ${SRC_MX_API} )
source_group( "core" FILES ${SRC_MX_CORE} )
source_group( "impl" FILES ${SRC_MX_IMPL} )
source_group( "pugixml" FILES ${SRC_MX_PUGIXML} )
source_group( "utility" FILES ${SRC_MX_UTILITY} )
source_group( "xml" FILES ${SRC_MX_XML} )
set_property(TARGET Mx PROPERTY CXX_STANDARD 14)

file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/Sourcecode/mxtest/file/PathRoot.h
        "// This file is auto generated by CMake
// To override these paths, pass in macro definitions to the compiler.
#pragma once

// The absolute path to the root of the repository.
#ifndef MX_REPO_ROOT_PATH
#define MX_REPO_ROOT_PATH \"${CMAKE_CURRENT_SOURCE_DIR}\"
#endif

// The absolute path to the binary output directory.
#ifndef MX_BINARY_OUTPUT_PATH
#define MX_BINARY_OUTPUT_PATH \"${CMAKE_BINARY_DIR}\"
#endif"
        )


# MxTest
if(MX_BUILD_TESTS)
    message("tests will be compiled")
    if(MX_BUILD_CORE_TESTS)
        message("core tests will be compiled")
        # add_compile_definitions(MX_COMPILE_CORE_TESTS)
        add_definitions(-DMX_COMPILE_CORE_TESTS)
    else()
        message("core tests will not be compiled")
    endif()    
    find_package( Threads )
    add_executable(MxTest ${SRC_MX_TEST_API} ${SRC_MX_TEST_CONTROL} ${SRC_MX_TEST_CORE} ${SRC_MX_TEST_FILE} ${SRC_MX_TEST_IMPL} ${SRC_MX_TEST_IMPORT} ${SRC_MX_TEST_UTILITY} ${SRC_MX_TEST_XML} ${SRC_CPUL})
    source_group( "api" FILES ${SRC_MX_TEST_API} )
    source_group( "control" FILES ${SRC_MX_TEST_CONTROL} )
    source_group( "core" FILES ${SRC_MX_TEST_CORE} )
    source_group( "file" FILES ${SRC_MX_TEST_FILE} )
    source_group( "impl" FILES ${SRC_MX_TEST_IMPL} )
    source_group( "import" FILES ${SRC_MX_TEST_IMPORT} )
    source_group( "utility" FILES ${SRC_MX_TEST_UTILITY} )
    source_group( "xml" FILES ${SRC_MX_TEST_XML} )
    source_group( "cpul" FILES ${SRC_CPUL} )
    target_link_libraries(MxTest Mx)
    target_link_libraries(MxTest ${CMAKE_THREAD_LIBS_INIT})
    set_property(TARGET MxTest PROPERTY CXX_STANDARD 14)
else()
  message("tests will not be compiled")
endif()
