[package]
name = "mxgen"
version = "0.1.0"
authors = ["Matthew James Briggs <matthew.james.briggs@gmail.com>"]
edition = "2018"

[[bin]]
name = "mxgen"
path = "src/bin/main.rs"

[[bin]]
name = "show"
path = "src/bin/show.rs"

[[bin]]
name = "flatten"
path = "src/bin/flatten.rs"

[lib]
name = "libmxgen"
path = "src/lib.rs"

[dependencies]
derive_more = "0.99.8"
exile = { version = "0.0.2", path = "/Users/mjb/repos/exile/exile" }
handlebars = "3.3.0"
indexmap = "1.4.0"
lazy_static = "1.4.0"
serde = "1.0.114"
structopt = "0.3.11"
tempfile = "3.1.0"
textwrap = "0.12.1"
uuid = { version = "0.8", features = ["v4"] }